# VirtualAudioProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_results.xml
src/: main.cpp
src/device_management/: CMakeLists.txt
src/device_management/include/: AudioDeviceManager.h
src/device_management/src/: AudioDeviceManager.cpp
src/tests/: CMakeLists.txt
src/tests/unit_tests/: TestDeviceEnumeration.cpp
src/utils/: CMakeLists.txt
src/utils/include/: Logger.h
src/utils/src/: Logger.cpp
